# xrootd

./: .clang-tidy  .gitignore  .gitlab-ci.yml  .gitmodules  .mailmap  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  COPYING.BSD  CTestConfig.cmake  CppUnitXrdHelpers.hh  Doxyfile  FileCopyTest.cc  FileSystemTest.cc  FileTest.cc  GNUmakearch  GNUmakefile  INSTALL  LICENSE  MANIFEST.in  Makefile.am  Makefile.msc  MonitorTestLib.cc  PathProcessor.hh  PollerTest.cc  PostMasterTest.cc  QueryTest.cc  README  README.Maintainer  README.NSDF.md  README.md  README.rst  SECURITY.md  Server.cc  Server.hh  SocketTest.cc  TestEnv.cc  TestEnv.hh  TextRunner.cc  ThreadingTest.cc  (+101 more)
XrdObjectStorageOss/: CMakeLists.txt  README.md  XrdObjectStorageOss.cpp  XrdObjectStorageOss.h  main.cpp
XrdObjectStorageOss/Kernel/: Aborted.h  AmazonCloudStorage.h  Async.h  CMakeLists.txt  CloudStorage.cpp  CloudStorage.h  CriticalSection.h  DType.cpp  DType.h  File.cpp  File.h  HeapMemory.cpp  HeapMemory.h  Kernel.cpp  Kernel.h  NetMessage.cpp  NetMessage.h  NetService.cpp  NetService.h  Path.cpp  Path.h  PointNi.h  Semaphore.cpp  Semaphore.h  StringMap.h  StringTree.cpp  StringTree.h  StringUtils.cpp  StringUtils.h  Thread.cpp  Thread.h  ThreadPool.cpp  ThreadPool.h  Time.cpp  Time.h  Url.cpp  Url.h  Utils.cpp  Utils.h  json.hpp
bindings/python/: .gitignore  CMakeLists.txt  MANIFEST.in  README  README.md  README.rst  setup.py  setup.py.in  setup_pypi.py  setup_standalone.py
docs/man/: CMakeLists.txt  XrdCnsd.8  cmsd.8  cns_ssi.8  frm_admin.8  frm_purged.8  frm_xfragent.8  frm_xfrd.8  libXrdSecgsiVOMS.1  libXrdVoms.1  mpxstats.8  pfc_print.8  xprep.1  xrd.1  xrdadler32.1  xrdcopy.1  xrdcp-old.1  xrdcp.1  xrdfs.1  xrdgsiproxy.1  xrdgsitest.1  xrdmapc.1  xrdpfc_print.8  xrdpwdadmin.8  xrdsssadmin.8  xrdstagetool.1  xrootd.8  xrootdfs.1
python/: CMakeLists.txt  MANIFEST.in  README.md  setup.py
python/docs/: Makefile  ReleaseNotes.txt
python/examples/: client_workflows.py  copy.py  dirlist.py  query.py  readlines.py
python/libs/: fsspec.py
python/src/: CMakeLists.txt  ChunkIterator.hh  Conversions.hh  PyXRootD.hh  PyXRootDAdler32.cc  PyXRootDAdler32.hh  PyXRootDCopyProcess.hh  PyXRootDEnv.hh  PyXRootDFile.hh  PyXRootDFileSystem.cc  PyXRootDModule.cc  PyXRootDTapeRest.cc  PyXRootDTapeRest.hh  PyXRootDURL.cc  Utils.cc
python/tests/: env.py  test_adler32_binding.py  test_copy.py  test_env.py  test_file.py  test_filesystem.py  test_fsspec.py  test_fsutils.py  test_glob.py  test_responses.py  test_structured_responses.py  test_tape.py  test_xattr_helpers.py
src/: AsyncResponseHandler.hh  CMakeLists.txt  ChunkIterator.hh  ClientType.hh  Conversions.hh  GNUmake.env  GNUmake.rules  HostInfoType.hh  Makefile.am  Makefile_include  PyXRootD.hh  PyXRootDClient.hh  PyXRootDCopyJob.cc  PyXRootDCopyJob.hh  PyXRootDCopyProcess.cc  PyXRootDCopyProcess.hh  PyXRootDCopyProgressHandler.cc  PyXRootDCopyProgressHandler.hh  PyXRootDDocumentation.hh  PyXRootDFile.cc  PyXRootDFile.hh  PyXRootDFileSystem.cc  PyXRootDFileSystem.hh  PyXRootDModule.cc  PyXRootDURL.cc  PyXRootDURL.hh  StatInfoType.hh  URLType.hh  Utils.cc  Utils.hh  XRootDStatusType.hh  XrdApps.cmake  XrdCeph.cmake  XrdClBind.cc  XrdClBind.hh  XrdClBindUtils.hh  XrdClFileSystemBind.cc  XrdClient.cmake  XrdCns.cmake  XrdCrypto.cmake  (+43 more)
src/XProtocol/: CMakeLists.txt  README  XProtocol.cc  XProtocol.hh  XPtypes.hh  YProtocol.hh
src/Xrd/: CMakeLists.txt  GNUmakefile  LinkTLS.cc  Makefile.am  XrdBuffXL.cc  XrdBuffXL.hh  XrdBuffer.cc  XrdBuffer.hh  XrdConfig.cc  XrdConfig.hh  XrdGlobals.cc  XrdInet.cc  XrdInet.hh  XrdInfo.cc  XrdInfo.hh  XrdJob.hh  XrdLink.cc  XrdLink.hh  XrdLinkCtl.cc  XrdLinkCtl.hh  XrdLinkInfo.hh  XrdLinkMatch.cc  XrdLinkMatch.hh  XrdLinkXeq.cc  XrdLinkXeq.hh  XrdMain.cc  XrdMonRoll.cc  XrdMonRoll.hh  XrdMonitor.cc  XrdMonitor.hh  XrdNetwork.cc  XrdNetwork.hh  XrdObject.hh  XrdObject.icc  XrdPlatform.hh  XrdPoll.cc  XrdPoll.hh  XrdPollDev.hh  XrdPollDev.icc  XrdPollE.hh  (+20 more)
src/XrdAcc/: CMakeLists.txt  GNUmakefile  Makefile.am  XrdAccAccess.cc  XrdAccAccess.hh  XrdAccAudit.cc  XrdAccAudit.hh  XrdAccAuthDB.hh  XrdAccAuthFile.cc  XrdAccAuthFile.hh  XrdAccAuthorize.hh  XrdAccCapability.cc  XrdAccCapability.hh  XrdAccConfig.cc  XrdAccConfig.hh  XrdAccEntity.cc  XrdAccEntity.hh  XrdAccGroups.cc  XrdAccGroups.hh  XrdAccPrivs.hh  XrdAccTest.cc
src/XrdApps/: CMakeLists.txt  GNUmakefile  Makefile.am  XrdAccTest.cc  XrdAppsCconfig.cc  XrdCks.cc  XrdCli.cc  XrdCpConfig.cc  XrdCpConfig.hh  XrdCpFile.cc  XrdCpFile.hh  XrdCpy.cc  XrdCrc32c.cc  XrdMapCluster.cc  XrdMpxStats.cc  XrdMpxXml.cc  XrdMpxXml.hh  XrdPinls.cc  XrdPrep.cc  XrdQStats.cc  XrdWait41.cc  Xrdadler32.cc
src/XrdBwm/: CMakeLists.txt  GNUmakefile  Makefile.am  XrdBwm.cc  XrdBwm.hh  XrdBwmConfig.cc  XrdBwmHandle.cc  XrdBwmHandle.hh  XrdBwmLogger.cc  XrdBwmLogger.hh  XrdBwmPolicy.hh  XrdBwmPolicy1.cc  XrdBwmPolicy1.hh  XrdBwmTrace.hh
src/XrdCS2/: GNUmakefile  Makefile.am  README  XrdCS2DCM.cc  XrdCS2DCM.hh  XrdCS2DCM2cs.cc  XrdCS2DCMConfig.cc  XrdCS2DCMFile.cc  XrdCS2DCMMain.cc  XrdCS2Oss.cc  XrdCS2Oss.hh  XrdCS2Req.cc  XrdCS2Req.hh  XrdCS2Xmi.cc  XrdCS2Xmi.hh  XrdCS2e
src/XrdCeph/: .gitlab-ci.yml  .travis.yml  CMakeLists.txt  CephOss.cc  CephOss.hh  CephOssDir.cc  CephOssDir.hh  CephOssFile.cc  CephOssFile.hh  CephXAttr.cc  CephXAttr.hh  README.md  XrdCephBulkAioRead.cc  XrdCephBulkAioRead.hh  XrdCephOss.cc  XrdCephOss.hh  XrdCephOssBufferedFile.cc  XrdCephOssBufferedFile.hh  XrdCephOssDir.cc  XrdCephOssDir.hh  XrdCephOssFile.cc  XrdCephOssFile.hh  XrdCephOssReadVFile.cc  (+9 more)
tests/: CMakeLists.txt  check-headers.sh  env.py  post-install.sh  test_client.py  test_client_type.py  test_copy.py  test_file.py  test_filesystem.py  test_threads.py  test_url.py  test_url_type.py
utils/: CMakeLists.txt  XrdCmsNotify.pm  XrdOlbNotify.pm  cms_monPerf  frm_xfr.hpss  fs_stat  globus_gridftp_server_posix.c  mps_MigrPurg  mps_PreStage  mps_Stage  mps_Xeq  mps_monStage.pm  mps_prep  ooss_CAlloc.pm  ooss_Lock.pm  ooss_MonP.pm  ooss_name2name.pm  xrdcp-tpc.sh  xrdsso  xrdsso_show.py  xrdtoken  xrootd-config
(+3275 files in other folders)
